Adds background pattern svg

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
-        <h1>Base Apparel project</h1>
+        <div class="container"></div>
     </body>
 </html>
