Uses flexbox to assign different widths to home page sections

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
-        <div class="container"></div>
+        <div class="home">
+            <div class="home__left-col">
+                nnnnnnnn
+            </div>
+            <div class="home__right-col">
+                <img src="img/hero-desktop.jpg" alt="" />
+            </div>
+        </div>
     </body>
 </html>
