--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
             <div class="home__left-col">
                 nnnnnnnn
             </div>
-            <div class="home__right-col">
-                <img src="img/hero-desktop.jpg" alt="" />
-            </div>
+            <div class="home__right-col"></div>
         </div>
     </body>
 </html>
