Adds padding to heading div

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="home">
             <div class="home__left-col">
-                nnnnnnnn
+                <div class="home__container"><h1>nnn</h1></div>
             </div>
             <div class="home__right-col"></div>
         </div>
