--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <body>
         <div class="home">
             <div class="home__left-col">
-                <div class="home__container"><h1>nnn</h1></div>
+                <div class="home__container">
+                    <div class="home__logo-div">
+                        <img src="img/logo.svg" />
+                    </div>
+                </div>
             </div>
             <div class="home__right-col"></div>
         </div>
