--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Base Apparel</title>
         <link
-            href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap"
+            href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,600,600i&display=swap"
             rel="stylesheet"
         />
         <link rel="stylesheet" href="css/main.css" />
@@ -17,6 +17,12 @@
                 <div class="home__container">
                     <div class="home__logo-div">
                         <img src="img/logo.svg" />
+                    </div>
+                    <div class="home__title-div">
+                        <h1 class="heading-primary">
+                            <span class="heading-primary--pink">We're</span>
+                            <span class="heading-primary--dark">coming soon</span>
+                        </h1>
                     </div>
                 </div>
             </div>
