Adds home page paragraph

--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
                     <div class="home__logo-div">
                         <img src="img/logo.svg" />
                     </div>
-                    <div class="home__title-div">
-                        <h1 class="heading-primary">
-                            <span class="heading-primary--pink">We're</span>
-                            <span class="heading-primary--dark">coming soon</span>
-                        </h1>
+                    <div class="home__body">
+                        <div class="home__title-div">
+                            <h1 class="heading-primary">
+                                <span class="heading-primary--pink">We're</span>
+                                <span class="heading-primary--dark">coming soon</span>
+                            </h1>
+                        </div>
+                        <p class="home__paragraph">
+                            Hello fello shopers! We're currently building our new fashion store. Add
+                            your email below to stay up-to-date with announcemets and our launch
+                            deals.
+                        </p>
                     </div>
                 </div>
             </div>
