Additional typography styles

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                     <div class="home__body">
                         <div class="home__title-div">
                             <h1 class="heading-primary">
-                                <span class="heading-primary--pink">We're</span>
-                                <span class="heading-primary--dark">coming soon</span>
+                                <p class="heading-primary--pink">We're</p>
+                                <p class="heading-primary--dark">coming</p>
+                                <p class="heading-primary--dark">soon</p>
                             </h1>
                         </div>
                         <p class="home__paragraph">
@@ -30,6 +31,7 @@
                             your email below to stay up-to-date with announcemets and our launch
                             deals.
                         </p>
+                        <input type="text" placeholder="Email Address" />
                     </div>
                 </div>
             </div>
