Creates additional layout divs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="home__logo-div">
                         <img src="img/logo.svg" />
                     </div>
-                    <div class="home__body">
+                    <div class="home__section">
                         <div class="home__title-div">
                             <h1 class="heading-primary">
                                 <p class="heading-primary--pink">We're</p>
@@ -26,12 +26,17 @@
                                 <p class="heading-primary--dark">soon</p>
                             </h1>
                         </div>
-                        <p class="home__paragraph">
-                            Hello fello shopers! We're currently building our new fashion store. Add
-                            your email below to stay up-to-date with announcemets and our launch
-                            deals.
-                        </p>
-                        <input type="text" placeholder="Email Address" />
+                        <div class="home__body">
+                            <p class="home__paragraph">
+                                Hello fello shopers! We're currently building our new fashion store.
+                                Add your email below to stay up-to-date with announcemets and our
+                                launch deals.
+                            </p>
+                            <form action="">
+                                <input type="text" placeholder="Email Address" />
+                                <button>Submit</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
