Styles email address input

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
                                 launch deals.
                             </p>
                             <form action="">
-                                <input type="text" placeholder="Email Address" />
+                                <input
+                                    class="home__input"
+                                    type="text"
+                                    placeholder="Email Address"
+                                />
                                 <button>Submit</button>
                             </form>
                         </div>
