Adds placeholder style prefixes for MIcrosoft edge and internet explorer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     type="text"
                                     placeholder="Email Address"
                                 />
-                                <button>Submit</button>
+                                <button class="home__btn">Submit</button>
                             </form>
                         </div>
                     </div>
