--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 Add your email below to stay up-to-date with announcemets and our
                                 launch deals.
                             </p>
-                            <form action="">
+                            <form class="home__form">
                                 <input
                                     class="home__input"
                                     type="text"
