Adds submit email icon

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                                     type="text"
                                     placeholder="Email Address"
                                 />
-                                <button class="home__btn">Submit</button>
+                                <button class="home__btn">
+                                    <img src="img/icon-arrow.svg" alt="submit-icon" />
+                                </button>
                             </form>
                         </div>
                     </div>
