Adds spacing to layout

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                     placeholder="Email Address"
                                 />
                                 <button class="home__btn">
-                                    <img src="img/icon-arrow.svg" alt="submit-icon" />
+                                    <img src="img/icon-arrow.svg" alt="submit-email-icon" />
                                 </button>
                             </form>
                         </div>
