--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="css/main.css" />
+        <script src="js/app.js"></script>
     </head>
     <body>
         <div class="home">
