Attaches submitEmail function to form submission

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 Add your email below to stay up-to-date with announcemets and our
                                 launch deals.
                             </p>
-                            <form class="home__form">
+                            <form class="home__form" onsubmit="submitEmail()">
                                 <input
                                     class="home__input"
                                     type="text"
