Adds error icon

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                                     type="text"
                                     placeholder="Email Address"
                                 />
+                                <img
+                                    class="home__icon"
+                                    src="img/icon-error.svg"
+                                    alt="warning-icon"
+                                />
                                 <button class="home__btn">
                                     <img src="img/icon-arrow.svg" alt="submit-email-icon" />
                                 </button>
