Adds error message paragraph

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                                 <button class="home__btn">
                                     <img src="img/icon-arrow.svg" alt="submit-email-icon" />
                                 </button>
+                                <p class="home__error-msg">Please provide a valid email</p>
                             </form>
                         </div>
                     </div>
