Toggles the visibility of form error feedback elements when submit button is clicked

--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
                                     placeholder="Email Address"
                                 />
                                 <img
-                                    class="home__icon"
+                                    class="home__icon toggle-visibility"
                                     src="img/icon-error.svg"
                                     alt="warning-icon"
                                 />
                                 <button class="home__btn">
                                     <img src="img/icon-arrow.svg" alt="submit-email-icon" />
                                 </button>
-                                <p class="home__error-msg">Please provide a valid email</p>
+                                <p class="home__error-msg toggle-visibility">
+                                    Please provide a valid email
+                                </p>
                             </form>
                         </div>
                     </div>
